{
  "sourceLanguage" : "en",
  "version" : "1.0",
  "strings" : {
    "Error details" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error details"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "错误详情"
          }
        },
        "zh-Hant-HK" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "錯誤詳情"
          }
        },
        "zh-Hant-TW" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "錯誤詳情"
          }
        }
      }
    },
    "Copy error" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Copy error"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "复制错误"
          }
        },
        "zh-Hant-HK" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "複製錯誤"
          }
        },
        "zh-Hant-TW" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "複製錯誤"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "关闭"
          }
        },
        "zh-Hant-HK" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "關閉"
          }
        },
        "zh-Hant-TW" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "關閉"
          }
        }
      }
    }
  }
}
